[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "jq>=1.11.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "lxml>=6.1.1",
    "pdfminer-six>=20260107",
    "pdfplumber>=0.11.10",
    "pypdf>=6.13.3",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
]
